[package]
name = "conker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9"}
clap = { version = "4.5.23", features = ["derive"] }
futures-util = {version = "0.3.31"}
log = { version = "0.4.22"}
env_logger = {version = "0.11.5"}
serde = { version = "1.0.216", features = ["derive"]}
serde_json = { version = "1.0.133", default-features = false, features = ["alloc"] }
tokio = { version = "1.42.0", features = ["full"]}
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"]}
# M - B
chrono = {version = "0.4.39", features = ["serde"]}
const_format = { version = "0.2.34"}
lazy_static = { version = "1.5.0"}
uuid = { version = "1.3", features = ["v4"]}
base64 = { version = "0.22.1" }
bytes = "1.0"
config = { version = "0.14.1"}
libp2p = { version = "0.54.1", features = []}
reqwest = { version = "0.12.9", features = ["blocking", "json", "rustls-tls"] }
sha256 = "1.4.0"
openssl = "0.10.68"
derive-getters = "0.5.0"
bollard = {version = "0.18.1" }
sha3 = "0.10.8"
zip = { version = "2.1.3", default-features = false, features = ["deflate"] }
ethers = "2.0.11"
futures-executor = "0.3.29"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2" 
tracing-appender = "0.2"
backtrace = "0.3"

[dev-dependencies]
test-log = "0.2.12"
testcontainers = "0.10.0"
rstest = "0.23.0"

[features]
no-docker = []  # Feature to disable Docker tests (usage: `cargo test --features no-docker`)


